Fix to long model names covering up model display buttons

--- a/web-app/css/jstree.css
+++ b/web-app/css/jstree.css
@@ -1,7 +1,7 @@
 #topBar {
-            border-radius:6px;
-	    padding: 8px;
-	    float: top;
+        border-radius:6px;
+        padding-bottom: 20px;
+        float: top;
         }
         #tablewrapper {
             margin-top: 60px;
